Add coding standard format file. (#30)
* Add coding standard format file.
Move all OCL hotfix related file to /dgpu/ocl-hotfix.
Add readme for media sample.
Add auto buld batch file MediaSample-build.bat for media sample.
Change config file for h264 and h265.
Update .gitingore due to the above changes.

* Delete dgpu/ocl-hotfix/fix-ocl-drop.sh

* Delete dgpu/ocl-hotfix/libigdrcl.so

delete ocl-hotfix related file in this repo,

* remove regex dependency.

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,12 @@
 *.h264
 *.264
 
+## dependencies
+dgpu\mediasample\ediaSample\deps\include\nlohmann
+dgpu\mediasample\ediaSample\deps\include\nlohmann\*
+
+## built executables
+dgpu\mediasample\MediaSample\x64
+dgpu\mediasample\MediaSample\x64\*
+dgpu\mediasample\MediaSample\bin
+dgpu\mediasample\MediaSample\bin\*
