Add ffmpeg/VAAPI encode service (#86)
* Add FFmpeg/VAAPI encoder service in HostService.
1. Refine VPL encode structure and put common functions in
HostEncodeService.
2. Implement FFmpeg/VAAPI encoder service and enable yuv420p/nv12/rgb32
input.
3. Align encode parameter for VPL and FFmpeg encoder.

Signed-off-by: luoying1234 <ying2.luo@intel.com>

* Add ivshmem device location path match check for setup to enable (#83)

multiple encoding instances.

Signed-off-by: Ying Luo <ying2.luo@intel.com>

* Optimize MRDA CPU utilization in guest VMs.

1. Update gRPC unary mode to streaming mode to avoid the frequently
connection.

Signed-off-by: Ying Luo <ying2.luo@intel.com>

* Add qat420xx driver support in gnr-d platform in host ffmpeg encoding
service.

Signed-off-by: Ying Luo <ying2.luo@intel.com>

* Add FFmpeg encoding trace log in host and VM.

Signed-off-by: Ying Luo <ying2.luo@intel.com>

* Refine structure of Linux HostService and sample_app and Windows
scripts for service/app scalability.

Signed-off-by: Ying Luo <ying2.luo@intel.com>

---------

Signed-off-by: luoying1234 <ying2.luo@intel.com>
Signed-off-by: Ying Luo <ying2.luo@intel.com>

--- a/modules/MediaResourceDirectAccess/Scripts/Linux/CMakeLists.txt
+++ b/modules/MediaResourceDirectAccess/Scripts/Linux/CMakeLists.txt
@@ -15,6 +15,9 @@ ENDIF()
 project(MRDAHostService)
 
 AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/../../HostService SERVICE_SRC)
+AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/../../HostService/EncodeService SERVICE_ENCODE_SRC)
+AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/../../HostService/EncodeService/VPLEncode SERVICE_VPLENCODE_SRC)
+AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/../../HostService/EncodeService/FFmpegEncode SERVICE_FFMPEGENCODE_SRC)
 AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/../../utils UTILS_SRC)
 
 set(TARGET HostService)
@@ -89,6 +92,9 @@ endforeach()
 
 set(DIR_SRC
   ${SERVICE_SRC}
+  ${SERVICE_ENCODE_SRC}
+  ${SERVICE_VPLENCODE_SRC}
+  ${SERVICE_FFMPEGENCODE_SRC}
   ${UTILS_SRC}
   )
 
@@ -104,35 +110,62 @@ target_link_libraries(${TARGET}
   ${_GRPC_GRPCPP}
   ${_PROTOBUF_LIBPROTOBUF})
 
-find_package(VPL REQUIRED)
-target_link_libraries(${TARGET} VPL::dispatcher)
+OPTION(VPL_SUPPORT
+  "Use VPL support"
+  OFF
+)
+
+OPTION(FFMPEG_SUPPORT
+  "Use FFMPEG support"
+  ON
+)
+
+OPTION(ENABLE_TRACE
+  "Use trace log"
+  OFF
+)
+
+IF(ENABLE_TRACE)
+  message(STATUS "Using trace log")
+  ADD_DEFINITIONS("-D_ENABLE_TRACE_")
+ENDIF(ENABLE_TRACE)
+
+IF(VPL_SUPPORT)
+  ADD_DEFINITIONS("-D_VPL_SUPPORT_")
+  find_package(VPL REQUIRED)
+  target_link_libraries(${TARGET} VPL::dispatcher)
+  set(LIBVA_SUPPORT
+    ON
+    CACHE BOOL "Enable hardware support.")
+  if(LIBVA_SUPPORT)
+      find_package(PkgConfig REQUIRED)
+      # note: pkg-config version for libva is *API* version
+      pkg_check_modules(PKG_LIBVA IMPORTED_TARGET libva>=1.2)
+      pkg_check_modules(PKG_LIBVA_DRM IMPORTED_TARGET libva-drm>=1.2)
+      if(PKG_LIBVA_FOUND)
+          target_compile_definitions(${TARGET} PUBLIC -DLIBVA_SUPPORT)
+          set(CMAKE_THREAD_PREFER_PTHREAD TRUE)
+          set(THREADS_PREFER_PTHREAD_FLAG TRUE)
+          find_package(Threads REQUIRED)
+          target_link_libraries(${TARGET} PkgConfig::PKG_LIBVA
+                              PkgConfig::PKG_LIBVA_DRM Threads::Threads)
+          target_include_directories(${TARGET} PUBLIC ${PKG_LIBVA_INCLUDE_DIRS})
+      else()
+          message(
+          SEND_ERROR
+              "libva not found: set LIBVA_SUPPORT=OFF to build ${TARGET} without libva support"
+          )
+      endif()
+  else()
+      message(STATUS "Building ${TARGET} without hardware support")
+  endif()
+ENDIF(VPL_SUPPORT)
+
+IF(FFMPEG_SUPPORT)
+  ADD_DEFINITIONS("-D_FFMPEG_SUPPORT_")
+  target_link_libraries(${TARGET} avcodec avutil swscale)
+ENDIF(FFMPEG_SUPPORT)
 
 include_directories(
   ${proto_path}
   )
-
-set(LIBVA_SUPPORT
-    ON
-    CACHE BOOL "Enable hardware support.")
-if(LIBVA_SUPPORT)
-    find_package(PkgConfig REQUIRED)
-    # note: pkg-config version for libva is *API* version
-    pkg_check_modules(PKG_LIBVA IMPORTED_TARGET libva>=1.2)
-    pkg_check_modules(PKG_LIBVA_DRM IMPORTED_TARGET libva-drm>=1.2)
-    if(PKG_LIBVA_FOUND)
-        target_compile_definitions(${TARGET} PUBLIC -DLIBVA_SUPPORT)
-        set(CMAKE_THREAD_PREFER_PTHREAD TRUE)
-        set(THREADS_PREFER_PTHREAD_FLAG TRUE)
-        find_package(Threads REQUIRED)
-        target_link_libraries(${TARGET} PkgConfig::PKG_LIBVA
-                            PkgConfig::PKG_LIBVA_DRM Threads::Threads)
-        target_include_directories(${TARGET} PUBLIC ${PKG_LIBVA_INCLUDE_DIRS})
-    else()
-        message(
-        SEND_ERROR
-            "libva not found: set LIBVA_SUPPORT=OFF to build ${TARGET} without libva support"
-        )
-    endif()
-else()
-    message(STATUS "Building ${TARGET} without hardware support")
-endif()
