--- a/modules/MediaResourceDirectAccess/Scripts/Windows/lib/CMakeLists.txt
+++ b/modules/MediaResourceDirectAccess/Scripts/Windows/lib/CMakeLists.txt
@@ -10,6 +10,14 @@ IF(WINDOWS_OS)
   ADD_DEFINITIONS("-D_WINDOWS_OS_" "-DMRDALIBRARY_EXPORTS")
 ENDIF()
 
+OPTION(ENABLE_TRACE
+  "Use trace log"
+  OFF
+)
+
+IF(ENABLE_TRACE)
+  ADD_DEFINITIONS("-D_ENABLE_TRACE_")
+ENDIF()
 
 # Project
 project(MRDAWinGuest)
