--- a/modules/MediaResourceDirectAccess/Scripts/Linux/CMakeLists.txt
+++ b/modules/MediaResourceDirectAccess/Scripts/Linux/CMakeLists.txt
@@ -18,6 +18,8 @@ AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/../../HostService SERVICE_SRC)
 AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/../../HostService/EncodeService SERVICE_ENCODE_SRC)
 AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/../../HostService/EncodeService/VPLEncode SERVICE_VPLENCODE_SRC)
 AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/../../HostService/EncodeService/FFmpegEncode SERVICE_FFMPEGENCODE_SRC)
+AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/../../HostService/DecodeService SERVICE_DECODE_SRC)
+AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/../../HostService/DecodeService/FFmpegDecode SERVICE_FFMPEGDECODE_SRC)
 AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/../../utils UTILS_SRC)
 
 set(TARGET HostService)
@@ -95,6 +97,8 @@ set(DIR_SRC
   ${SERVICE_ENCODE_SRC}
   ${SERVICE_VPLENCODE_SRC}
   ${SERVICE_FFMPEGENCODE_SRC}
+  ${SERVICE_DECODE_SRC}
+  ${SERVICE_FFMPEGDECODE_SRC}
   ${UTILS_SRC}
   )
 
