Fix issue VCDP-556 to correct hardware resource count in gnrd media ip. (#97)
Signed-off-by: Ying Luo <ying2.luo@intel.com>

--- a/modules/MediaResourceDirectAccess/Scripts/Linux/CMakeLists.txt
+++ b/modules/MediaResourceDirectAccess/Scripts/Linux/CMakeLists.txt
@@ -167,7 +167,7 @@ ENDIF(VPL_SUPPORT)
 
 IF(FFMPEG_SUPPORT)
   ADD_DEFINITIONS("-D_FFMPEG_SUPPORT_")
-  target_link_libraries(${TARGET} avcodec avutil swscale swresample va-drm va)
+  target_link_libraries(${TARGET} avcodec avutil swscale swresample)
 ENDIF(FFMPEG_SUPPORT)
 
 include_directories(
