add sw ffmpeg decoder in Examples/SampleDecodeApp. (#98)
Signed-off-by: Ying Luo <ying2.luo@intel.com>

--- a/modules/Examples/SampleDecodeApp/scripts/CMakeLists.txt
+++ b/modules/Examples/SampleDecodeApp/scripts/CMakeLists.txt
@@ -23,24 +23,35 @@ ENDIF()
 # Project
 project(MRDASampleDecodeApp)
 
-AUX_SOURCE_DIRECTORY(../src SAMPLE_SRC)
+set(SAMPLE_HW_SRC ../src/sample_decode.cpp)
+set(SAMPLE_SW_SRC ../src/sample_decode_sw.cpp)
 
-set(TARGET MRDASampleDecodeApp)
+set(TARGET_HW MRDASampleDecodeApp)
+set(TARGET_SW MRDASampleDecodeAppSW)
 
-set(DIR_SRC
-  ${SAMPLE_SRC}
+set(DIR_SRC_HW
+  ${SAMPLE_HW_SRC}
+  )
+set(DIR_SRC_SW
+  ${SAMPLE_SW_SRC}
   )
 
 link_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../../MediaResourceDirectAccess/Scripts/Windows/lib/install/lib/)
 link_directories($ENV{MSYS2_HOME}/ffmpeg-7.1/ffmpeg_install/bin/)
 
 # Targets
-add_executable(${TARGET}
-  ${DIR_SRC}
+add_executable(${TARGET_HW}
+  ${DIR_SRC_HW}
+  )
+add_executable(${TARGET_SW}
+  ${DIR_SRC_SW}
   )
 
-target_link_libraries(${TARGET} libWinGuest)
-target_link_libraries(${TARGET} avformat avcodec)
+target_link_libraries(${TARGET_HW} libWinGuest)
+target_link_libraries(${TARGET_HW} avformat avcodec)
+
+target_link_libraries(${TARGET_SW} libWinGuest)
+target_link_libraries(${TARGET_SW} avformat avcodec avutil swscale)
 
 include_directories(
   ${CMAKE_CURRENT_SOURCE_DIR}/../../../MediaResourceDirectAccess/Scripts/Windows/lib/install/lib/install/include
