MDSCMRDASample Add file input (#107)
1. Add support for "rgb32", "yuv420p"
and "nv12" format file input for
"software", "MRDA" and "QES"
encode types.
2. Refined the sample code with
more sub-functions.
3. Format documents with Tab
replaced by Spaces.

Reviewed by: Andrew Zhang <andrew.zhang@intel.com>

--- a/modules/Examples/MDSCMRDASample/scripts/CMakeLists.txt
+++ b/modules/Examples/MDSCMRDASample/scripts/CMakeLists.txt
@@ -51,7 +51,7 @@ add_executable(${TARGET}
   ${DIR_SRC}
   )
 
-target_link_libraries(${TARGET} QESLib libWinGuest MultiDisplayScreenCapture avcodec avdevice avfilter avformat avutil postproc swresample swscale)
+target_link_libraries(${TARGET} QESLib D3D11 libWinGuest MultiDisplayScreenCapture avcodec avdevice avfilter avformat avutil postproc swresample swscale)
 
 include_directories(
 ${CMAKE_CURRENT_SOURCE_DIR}/../../../MediaResourceDirectAccess/Scripts/Windows/lib/install/include
